unzip code working successfully

--- a/01 - Ingestion.ipynb
+++ b/01 - Ingestion.ipynb
@@ -18,22 +18,22 @@
    },
    "outputs": [],
    "source": [
-    "# Trip Data\n",
-    "from pyspark.sql.types import StructType, StructField, StringType\n",
+    "# Trip Data (bronze layer)\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType\n",
     "\n",
     "trip_schema = StructType([\n",
     "  StructField(\"ride_id\", StringType(), True),\n",
     "  StructField(\"rideable_type\", StringType(), True),\n",
-    "  StructField(\"started_at\", StringType(), True),\n",
-    "  StructField(\"ended_at\", StringType(), True),\n",
+    "  StructField(\"started_at\", StringType(), True),  \n",
+    "  StructField(\"ended_at\", StringType(), True),    \n",
     "  StructField(\"start_station_name\", StringType(), True),\n",
     "  StructField(\"start_station_id\", StringType(), True),\n",
     "  StructField(\"end_station_name\", StringType(), True),\n",
     "  StructField(\"end_station_id\", StringType(), True),\n",
-    "  StructField(\"start_lat\", StringType(), True),\n",
-    "  StructField(\"start_lng\", StringType(), True),\n",
-    "  StructField(\"end_lat\", StringType(), True),\n",
-    "  StructField(\"end_lng\", StringType(), True),\n",
+    "  StructField(\"start_lat\", DoubleType(), True),\n",
+    "  StructField(\"start_lng\", DoubleType(), True),\n",
+    "  StructField(\"end_lat\", DoubleType(), True),\n",
+    "  StructField(\"end_lng\", DoubleType(), True),\n",
     "  StructField(\"member_casual\", StringType(), True)\n",
     "])\n",
     "\n",
@@ -41,40 +41,16 @@
     "  .format(\"cloudFiles\")\n",
     "  .option(\"cloudFiles.format\", \"csv\")\n",
     "  .option(\"header\", \"true\")\n",
-    "  .option(\"cloudFiles.schemaLocation\", \"dbfs:/mnt//trips/trip_data/schema\")\n",
+    "  .option(\"cloudFiles.schemaLocation\", \"dbfs:/mnt/trips/trip_data/schema\")\n",
     "  .option(\"cloudFiles.rescuedDataColumn\", \"_rescued_data\")\n",
     "  .option(\"cloudFiles.schemaEvolutionMode\", \"rescue\")         \n",
     "  .schema(trip_schema)\n",
-    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/trips\") \n",
+    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/raw\") \n",
     "  .writeStream\n",
     "  .option(\"checkpointLocation\", \"dbfs:/mnt/trips/trip_data/data\")\n",
     "  .trigger(availableNow=True)\n",
     "  .toTable(\"bronze_trip_data\")\n",
     ").awaitTermination()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "30ca936f-9ee1-446c-aec8-08fc81f5ae98",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT COUNT(*) AS total_rows\n",
-    "FROM bronze_trip_data"
    ]
   },
   {
@@ -95,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "# Weather Data\n",
+    "# Weather Data (bronze layer)\n",
     "from pyspark.sql.types import StructType, StructField, StringType\n",
     "\n",
     "weather_schema = StructType([\n",
@@ -119,36 +95,12 @@
     "  .option(\"cloudFiles.rescuedDataColumn\", \"_rescued_data\")\n",
     "  .option(\"cloudFiles.schemaEvolutionMode\", \"rescue\")\n",
     "  .schema(weather_schema)\n",
-    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/trips\")\n",
+    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/weather\")\n",
     "  .writeStream\n",
     "  .option(\"checkpointLocation\", \"dbfs:/mnt/weather_data/data\")\n",
     "  .trigger(availableNow=True)\n",
     "  .toTable(\"bronze_weather_data\")\n",
     ").awaitTermination()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3e3fb21f-34eb-40bb-8640-d7f8e8bfb795",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT COUNT(*) AS total_rows\n",
-    "FROM bronze_weather_data"
    ]
   }
  ],
@@ -170,7 +122,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5623742827959761,
+     "commandId": 6731158450300994,
      "dataframes": [
       "_sqldf"
      ]
