--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -1,22 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "26647b33-acb7-4fd7-aead-f9389f6f12fc",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
    "computePreferences": null,
