Creation of DIM date day, DIM date hour

--- a/05 - Performance.ipynb
+++ b/05 - Performance.ipynb
@@ -5,7 +5,37 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "591e130a-b9d2-4f42-abea-ef501fa8441e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- bronze_trip_data rows\n",
+    "SELECT COUNT(*) AS total_rows\n",
+    "FROM bronze_trip_data;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fa31cfa9-ac2d-455c-8aee-75a352a5bf3d",
      "showTitle": false,
@@ -17,7 +47,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "-- bronze_trip_data columns and rows\n",
+    "-- bronze_trip_data columns\n",
     "SELECT COUNT(*) AS total_rows\n",
     "FROM bronze_trip_data;\n",
     "\n",
@@ -31,7 +61,37 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "019036ea-c155-4494-aa64-0b1666a50460",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "-- bronze_weather_data rows\n",
+    "SELECT COUNT(*) AS total_rows\n",
+    "FROM bronze_weather_data;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "63ac611c-5998-49d9-9602-960880e40cb4",
      "showTitle": false,
@@ -43,10 +103,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "-- bronze_weather_data columns and rows\n",
-    "SELECT COUNT(*) AS total_rows\n",
-    "FROM bronze_weather_data;\n",
-    "\n",
+    "-- bronze_weather_data columns\n",
     "SELECT column_name, data_type\n",
     "FROM information_schema.columns\n",
     "WHERE table_name = 'bronze_weather_data';"
@@ -64,6 +121,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 5345400243554994,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "05 - Performance",
