--- a/Draft.ipynb
+++ b/Draft.ipynb
@@ -5,30 +5,8 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ea5eb533-14f2-4aa5-8b07-16bc59372e37",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE bronze_weather_data "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "b326d492-4614-42a8-8987-20f6060f71d7",
      "showTitle": false,
@@ -38,6 +16,7 @@
    },
    "outputs": [],
    "source": [
+    "#unzip \n",
     "import zipfile\n",
     "import io\n",
     "\n",
@@ -79,9 +58,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "collapsed": true,
      "inputWidgets": {},
-     "nuid": "a6156b07-9400-4923-bdb4-7589ccb4f367",
+     "nuid": "f43e1edb-a177-48d6-896a-d76d29ddcc92",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -89,39 +72,33 @@
    },
    "outputs": [],
    "source": [
-    "# Trip Data\n",
-    "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "\n",
-    "trip_schema = StructType([\n",
-    "  StructField(\"ride_id\", StringType(), True),\n",
-    "  StructField(\"rideable_type\", StringType(), True),\n",
-    "  StructField(\"started_at\", StringType(), True),\n",
-    "  StructField(\"ended_at\", StringType(), True),\n",
-    "  StructField(\"start_station_name\", StringType(), True),\n",
-    "  StructField(\"start_station_id\", StringType(), True),\n",
-    "  StructField(\"end_station_name\", StringType(), True),\n",
-    "  StructField(\"end_station_id\", StringType(), True),\n",
-    "  StructField(\"start_lat\", StringType(), True),\n",
-    "  StructField(\"start_lng\", StringType(), True),\n",
-    "  StructField(\"end_lat\", StringType(), True),\n",
-    "  StructField(\"end_lng\", StringType(), True),\n",
-    "  StructField(\"member_casual\", StringType(), True)\n",
-    "])\n",
-    "\n",
-    "(spark.readStream\n",
-    "  .format(\"cloudFiles\")\n",
-    "  .option(\"cloudFiles.format\", \"csv\")\n",
-    "  .option(\"header\", \"true\")\n",
-    "  .option(\"cloudFiles.schemaLocation\", \"dbfs:/mnt//trips/trip_data/schema\")\n",
-    "  .option(\"cloudFiles.rescuedDataColumn\", \"_rescued_data\")\n",
-    "  .option(\"cloudFiles.schemaEvolutionMode\", \"rescue\")         \n",
-    "  .schema(trip_schema)\n",
-    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/trips\") \n",
-    "  .writeStream\n",
-    "  .option(\"checkpointLocation\", \"dbfs:/mnt/trips/trip_data/data\")\n",
-    "  .trigger(availableNow=True)\n",
-    "  .toTable(\"bronze_trip_data\")\n",
-    ").awaitTermination()"
+    "#trip column type\n",
+    "df = spark.table(\"divvy.default.bronze_trip_data\")\n",
+    "display(spark.createDataFrame(df.dtypes, [\"column\", \"type\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "collapsed": true,
+     "inputWidgets": {},
+     "nuid": "501df412-f205-4583-b443-edf73be76b4b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#weather column type\n",
+    "df = spark.table(\"divvy.default.bronze_weather_data\")\n",
+    "display(spark.createDataFrame(df.dtypes, [\"column\", \"type\"]))"
    ]
   },
   {
@@ -131,7 +108,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "d72b5871-47fd-4827-b1c6-80b0df2813e9",
+     "nuid": "ab62777c-5a16-420f-9118-8e74846a3ac6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -139,91 +116,120 @@
    },
    "outputs": [],
    "source": [
-    "# Weather Data\n",
-    "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "\n",
-    "weather_schema = StructType([\n",
-    "  StructField(\"YEAR\", StringType(), True),\n",
-    "  StructField(\"MO\", StringType(), True),\n",
-    "  StructField(\"DY\", StringType(), True),\n",
-    "  StructField(\"HR\", StringType(), True),\n",
-    "  StructField(\"TEMP\", StringType(), True),\n",
-    "  StructField(\"PRCP\", StringType(), True),\n",
-    "  StructField(\"HMDT\", StringType(), True),\n",
-    "  StructField(\"WND_SPD\", StringType(), True),\n",
-    "  StructField(\"ATM_PRESS\", StringType(), True),\n",
-    "  StructField(\"REF\", StringType(), True)\n",
-    "])\n",
-    "\n",
-    "(spark.readStream\n",
-    "  .format(\"cloudFiles\")\n",
-    "  .option(\"cloudFiles.format\", \"csv\")\n",
-    "  .option(\"header\", \"true\") \n",
-    "  .option(\"cloudFiles.schemaLocation\", \"dbfs:/mnt/weather/weather_data/schema\")\n",
-    "  .option(\"cloudFiles.rescuedDataColumn\", \"_rescued_data\")\n",
-    "  .option(\"cloudFiles.schemaEvolutionMode\", \"rescue\")\n",
-    "  .schema(weather_schema)\n",
-    "  .load(\"abfss://divvycontainer@divvystorage1.dfs.core.windows.net/trips\")\n",
-    "  .writeStream\n",
-    "  .option(\"checkpointLocation\", \"dbfs:/mnt/weather_data/data\")\n",
-    "  .trigger(availableNow=True)\n",
-    "  .toTable(\"bronze_weather_data\")\n",
-    ").awaitTermination()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "72b37b51-bea4-4fca-a4a8-3e93403278ee",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "-- Trip Data (silver layer)\n",
-    "CREATE OR REPLACE TABLE silver_ride_fact\n",
-    "(\n",
-    "  ride_key BIGINT GENERATED ALWAYS AS IDENTITY, -- Surrogate Key for the Fact Table\n",
-    "  ride_id STRING,\n",
-    "  rideable_type STRING,\n",
-    "  started_at TIMESTAMP,\n",
-    "  ended_at TIMESTAMP,\n",
-    "  start_station_id STRING, -- Keep as STRING based on data sample\n",
-    "  end_station_id STRING,   -- Keep as STRING based on data sample\n",
-    "  start_lat DOUBLE,\n",
-    "  start_lng DOUBLE,\n",
-    "  end_lat DOUBLE,\n",
-    "  end_lng DOUBLE,\n",
-    "  member_casual STRING\n",
+    "from pyspark.sql.functions import (\n",
+    "    col, date_format, year, quarter, month, dayofmonth, dayofweek, \n",
+    "    when, lit, expr\n",
     ")\n",
-    "USING DELTA\n",
-    "COMMENT 'Curated fact table with correct data types and data quality checks';\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DateType, BooleanType\n",
     "\n",
-    "-- Insert (or use MERGE INTO for updates/deduplication) the transformed data\n",
-    "INSERT INTO silver_ride_fact\n",
-    "SELECT\n",
-    "  ride_id,\n",
-    "  rideable_type,\n",
-    "  CAST(started_at AS TIMESTAMP) AS started_at,\n",
-    "  CAST(ended_at AS TIMESTAMP) AS ended_at,\n",
-    "  start_station_id,\n",
-    "  end_station_id,\n",
-    "  CAST(start_lat AS DOUBLE) AS start_lat,\n",
-    "  CAST(start_lng AS DOUBLE) AS start_lng,\n",
-    "  CAST(end_lat AS DOUBLE) AS end_lat,\n",
-    "  CAST(end_lng AS DOUBLE) AS end_lng,\n",
-    "  member_casual\n",
-    "FROM\n",
-    "  bronze_ride_data\n",
-    "-- Optional: Add a WHERE clause here for basic data quality filtering (e.g., non-null ride_id)\n",
-    "WHERE ride_id IS NOT NULL;"
+    "# Define date range\n",
+    "start_date = \"2015-01-01\"\n",
+    "end_date = \"2030-12-31\"\n",
+    "\n",
+    "# Create a DataFrame with a sequence of dates\n",
+    "dates_df = spark.sql(f\"\"\"\n",
+    "  SELECT sequence(to_date('{start_date}'), to_date('{end_date}'), interval 1 day) as date_seq\n",
+    "\"\"\").selectExpr(\"explode(date_seq) as Full_Date\")\n",
+    "\n",
+    "# Add columns\n",
+    "dim_date_df = dates_df \\\n",
+    "    .withColumn(\"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(IntegerType())) \\\n",
+    "    .withColumn(\"Year\", year(col(\"Full_Date\"))) \\\n",
+    "    .withColumn(\"Quarter\", quarter(col(\"Full_Date\"))) \\\n",
+    "    .withColumn(\"Month\", month(col(\"Full_Date\"))) \\\n",
+    "    .withColumn(\"Month_Name\", date_format(col(\"Full_Date\"), \"MMMM\")) \\\n",
+    "    .withColumn(\"Day_of_Month\", dayofmonth(col(\"Full_Date\"))) \\\n",
+    "    .withColumn(\"Day_of_Week\", dayofweek(col(\"Full_Date\"))) \\\n",
+    "    .withColumn(\"Day_Name\", date_format(col(\"Full_Date\"), \"EEEE\")) \\\n",
+    "    .withColumn(\"Is_Weekend\", when(col(\"Day_of_Week\").isin([1,7]), lit(True)).otherwise(lit(False))) \\\n",
+    "    .withColumn(\n",
+    "        \"Season\",\n",
+    "        when(month(col(\"Full_Date\")).isin([12,1,2]), \"Winter\")\n",
+    "        .when(month(col(\"Full_Date\")).isin([3,4,5]), \"Spring\")\n",
+    "        .when(month(col(\"Full_Date\")).isin([6,7,8]), \"Summer\")\n",
+    "        .otherwise(\"Fall\")\n",
+    "    )\n",
+    "\n",
+    "# Reorder columns\n",
+    "dim_date_df = dim_date_df.select(\n",
+    "    \"Date_Key\", \"Full_Date\", \"Year\", \"Quarter\", \"Month\", \"Month_Name\",\n",
+    "    \"Day_of_Month\", \"Day_of_Week\", \"Day_Name\", \"Is_Weekend\", \"Season\"\n",
+    ")\n",
+    "\n",
+    "# Create managed table\n",
+    "dim_date_df.write.mode(\"overwrite\").saveAsTable(\"divvy.default.DIM_Date_day\")\n",
+    "\n",
+    "display(dim_date_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f8dad4b9-a805-4cec-a9a2-349855c7283e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import explode, sequence, to_date, date_format, col, lit, when\n",
+    "\n",
+    "# Define date and hour range\n",
+    "start_date = \"2015-01-01\"\n",
+    "end_date = \"2030-12-31\"\n",
+    "\n",
+    "# Create a DataFrame with a sequence of dates\n",
+    "dates_df = spark.sql(f\"\"\"\n",
+    "  SELECT sequence(to_date('{start_date}'), to_date('{end_date}'), interval 1 day) as date_seq\n",
+    "\"\"\").selectExpr(\"explode(date_seq) as Full_Date\")\n",
+    "\n",
+    "# Create hour and minute bucket DataFrame\n",
+    "hours = spark.range(0, 24).withColumnRenamed(\"id\", \"Hour\")\n",
+    "minute_buckets = spark.createDataFrame([(0,), (15,), (30,), (45,)], [\"MinuteBucket\"])\n",
+    "\n",
+    "# Cross join dates, hours, and minute buckets\n",
+    "dim_date_hour_df = dates_df.crossJoin(hours).crossJoin(minute_buckets)\n",
+    "\n",
+    "# Add Date_Key\n",
+    "dim_date_hour_df = dim_date_hour_df.withColumn(\n",
+    "    \"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(\"int\")\n",
+    ")\n",
+    "\n",
+    "# IsRushHour: 7-9am and 16-18pm\n",
+    "dim_date_hour_df = dim_date_hour_df.withColumn(\n",
+    "    \"IsRushHour\",\n",
+    "    when(\n",
+    "        ((col(\"Hour\").between(7, 9)) | (col(\"Hour\").between(16, 18))),\n",
+    "        lit(True)\n",
+    "    ).otherwise(lit(False))\n",
+    ")\n",
+    "\n",
+    "# Timeofday: Night (0-5), Morning (6-11), Afternoon (12-17), Evening (18-23)\n",
+    "dim_date_hour_df = dim_date_hour_df.withColumn(\n",
+    "    \"Timeofday\",\n",
+    "    when(col(\"Hour\").between(0, 5), \"Night\")\n",
+    "    .when(col(\"Hour\").between(6, 11), \"Morning\")\n",
+    "    .when(col(\"Hour\").between(12, 17), \"Afternoon\")\n",
+    "    .otherwise(\"Evening\")\n",
+    ")\n",
+    "\n",
+    "# Select and reorder columns\n",
+    "dim_date_hour_df = dim_date_hour_df.select(\n",
+    "    \"Date_Key\", \"Hour\", \"MinuteBucket\", \"IsRushHour\", \"Timeofday\"\n",
+    ")\n",
+    "\n",
+    "# Create managed table\n",
+    "dim_date_hour_df.write.mode(\"overwrite\").saveAsTable(\"divvy.default.DIM_date_hour\")\n",
+    "\n",
+    "display(dim_date_hour_df)"
    ]
   }
  ],
@@ -239,7 +245,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5345400243554991,
+     "commandId": 5444801716230496,
      "dataframes": [
       "_sqldf"
      ]
