Added DIM tables (Rider, Station, Wheater) and PK for DIM dates day+hour. Testing phase

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -71,6 +71,28 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "26edfabd-88ee-404a-baf3-2412515811f0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- PK for dim_date_day\n",
+    "ALTER TABLE divvy.default.DIM_Date_day\n",
+    "ADD CONSTRAINT dim_date_day_pk PRIMARY KEY (Date_Key)\n",
+    "NOT ENFORCED;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -136,6 +158,113 @@
     "dim_date_hour_df.write.mode(\"overwrite\").saveAsTable(\"divvy.default.DIM_date_hour\")\n",
     "\n",
     "display(dim_date_hour_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "10c43f81-2b18-446a-ac1f-8ed7896672f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- PK for dim_date_hour\n",
+    "ALTER TABLE divvy.default.DIM_Date_hour\n",
+    "ADD CONSTRAINT dim_date_day_pk PRIMARY KEY (Date_Key)\n",
+    "NOT ENFORCED;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a14ce24a-5d77-4441-a8fe-93a506d4d76f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- DIM Station\n",
+    "\n",
+    "CREATE TABLE Dim_Station (\n",
+    "  Station_Key STRING,\n",
+    "  Station_Name STRING,\n",
+    "  Latitude_Longitude DOUBLE,\n",
+    "  City STRING,\n",
+    "  Community_Area STRING,\n",
+    "  CONSTRAINT pk_Station_Key PRIMARY KEY (Station_Key)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6cd7239e-d715-44ef-92bb-853bdfad7dda",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- DIM Rider\n",
+    "\n",
+    "CREATE TABLE Dim_Rider (\n",
+    "  Rider_key STRING,\n",
+    "  Bike_Type STRING,\n",
+    "  CONSTRAINT pk_Rider_key PRIMARY KEY (Rider_key)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c355f46b-8af7-49f1-8eda-94a9c1d73665",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- DIM Weather\n",
+    "\n",
+    "CREATE TABLE Dim_Weather(\n",
+    "  Weather_Key STRING,\n",
+    "  Temp_type_text STRING,\n",
+    "  Temp_type_bin DOUBLE,\n",
+    "  Humidity_categories_text STRING,\n",
+    "  Humidity_categories_bin DOUBLE,\n",
+    "  Precipitation_types_text STRING,\n",
+    "  Precipitation_types_bin DOUBLE,\n",
+    "  Wind_type_categories_text STRING,\n",
+    "  Wind_type_categories_bin DOUBLE,\n",
+    "  CONSTRAINT pk_Weather_Key PRIMARY KEY (Weather_Key)\n",
+    ");"
    ]
   }
  ],
