DIM tables done

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -24,7 +24,7 @@
     "    col, date_format, year, quarter, month, dayofmonth, dayofweek, \n",
     "    when, lit, expr\n",
     ")\n",
-    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DateType, BooleanType\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, DateType, BooleanType\n",
     "\n",
     "# Define date range\n",
     "start_date = \"2015-01-01\"\n",
@@ -37,7 +37,7 @@
     "\n",
     "# Add columns\n",
     "dim_date_df = dates_df \\\n",
-    "    .withColumn(\"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(IntegerType())) \\\n",
+    "    .withColumn(\"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\")) \\\n",
     "    .withColumn(\"Year\", year(col(\"Full_Date\"))) \\\n",
     "    .withColumn(\"Quarter\", quarter(col(\"Full_Date\"))) \\\n",
     "    .withColumn(\"Month\", month(col(\"Full_Date\"))) \\\n",
@@ -60,9 +60,11 @@
     "    \"Day_of_Month\", \"Day_of_Week\", \"Day_Name\", \"Is_Weekend\", \"Season\"\n",
     ")\n",
     "\n",
-    "# Create managed table\n",
-    "dim_date_df.write.mode(\"overwrite\").saveAsTable(\"divvy.default.DIM_Date_day\")\n",
-    "\n",
+    "# Create managed table with correct schema and primary key\n",
+    "dim_date_df.write \\\n",
+    "    .option(\"overwriteSchema\", \"true\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .saveAsTable(\"divvy.default.DIM_Date_day\")\n",
     "display(dim_date_df)"
    ]
   },
@@ -71,9 +73,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "26edfabd-88ee-404a-baf3-2412515811f0",
+     "nuid": "dd8410f2-0b29-47e6-8bed-58043e84a106",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -82,10 +88,13 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- PK for dim_date_day\n",
-    "ALTER TABLE divvy.default.DIM_Date_day\n",
+    "--dim_date_day_pk\n",
+    "ALTER TABLE divvy.default.dim_date_day\n",
+    "ALTER COLUMN Date_Key SET NOT NULL;\n",
+    "\n",
+    "ALTER TABLE divvy.default.dim_date_day\n",
     "ADD CONSTRAINT dim_date_day_pk PRIMARY KEY (Date_Key)\n",
-    "NOT ENFORCED;"
+    "NOT ENFORCED"
    ]
   },
   {
@@ -165,7 +174,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "10c43f81-2b18-446a-ac1f-8ed7896672f7",
      "showTitle": false,
@@ -176,9 +189,18 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- PK for dim_date_hour\n",
+    "-- Add unique primary key column: dim_date_hour_pk\n",
     "ALTER TABLE divvy.default.DIM_Date_hour\n",
-    "ADD CONSTRAINT dim_date_day_pk PRIMARY KEY (Date_Key)\n",
+    "ADD COLUMN dim_date_hour_pk STRING;\n",
+    "\n",
+    "UPDATE divvy.default.DIM_Date_hour\n",
+    "SET dim_date_hour_pk = concat(Date_Key, '_', cast(Hour as string), '_', cast(MinuteBucket as string));\n",
+    "\n",
+    "ALTER TABLE divvy.default.DIM_Date_hour\n",
+    "ALTER COLUMN dim_date_hour_pk SET NOT NULL;\n",
+    "\n",
+    "ALTER TABLE divvy.default.DIM_Date_hour\n",
+    "ADD CONSTRAINT dim_date_hour_pk PRIMARY KEY (dim_date_hour_pk)\n",
     "NOT ENFORCED;"
    ]
   },
@@ -187,7 +209,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a14ce24a-5d77-4441-a8fe-93a506d4d76f",
      "showTitle": false,
@@ -215,7 +241,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6cd7239e-d715-44ef-92bb-853bdfad7dda",
      "showTitle": false,
@@ -240,7 +270,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c355f46b-8af7-49f1-8eda-94a9c1d73665",
      "showTitle": false,
@@ -279,6 +313,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 5444801716230499,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "02 - Creation",
